correction texte dans avis component html

--- a/src/app/avis/avis.component.html
+++ b/src/app/avis/avis.component.html
@@ -1,5 +1,5 @@
 <div>
-    <h1>Ajouter une réservation</h1>
+    <h1>Ajouter un avis</h1>
     <form action="" (ngSubmit)="addAvis()">
         <table>
             <tr>
